Fixing Search Suggestions Algorithm

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                             <span class="material-symbols-outlined">my_location</span>
                         </button>
                     </div>
+                    <div class="search-suggestions">
+                        <ul></ul>
+                    </div>
                 </div>
                 <div class="settings-container">
                     <button class="unit-toggle" title="Toggle temperature unit">°C</button>
